--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,6 +13,7 @@
     #shell
     ~/.bashrc: nvidia/bashrc
     ~/.zshrc: etczsh/zshrc
+    ~/.oh-my-zsh: ohmyzsh
     ~/.oh-my-zsh/custom/aliases.zsh: etczsh/aliases.zsh
     ~/.oh-my-zsh/custom/macos.zsh: etczsh/macos.zsh
     ~/.face: face
@@ -58,7 +59,6 @@
   - [ git submodule update --init --recursive, Installing submodules]
   - [install_me/install_ubuntu_packages.sh, verify that all prereq installed (on error run this command as root) ]
   - [ ~/dotfiles/etczsh/make_default_shell.sh, set zsh as default shell ]
-  - [ test -d ~/.oh-my-zsh || KEEP_ZSHRC=true sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)", install ohmyzsh]
   - [ ~/dotfiles/etczsh/install_zsh_plugins.sh install, install zsh plugins ]
   - [ test -d ~/.oh-my-zsh/plugins/shellfirm/shellfirm.plugin.zsh || curl https://raw.githubusercontent.com/kaplanelad/shellfirm/main/shell-plugins/shellfirm.plugin.oh-my-zsh.zsh --create-dirs -o ~/.oh-my-zsh/plugins/shellfirm/shellfirm.plugin.zsh , install shellfirm plugin]
   - [ test -f ~/.tmux.conf || cp ~/dotfiles/tmux.conf ~/.tmux.conf, setting tmux local conf]
