--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -65,8 +65,7 @@
   - [curl --proto '=https' --tlsv1.2 -LsSf https://setup.atuin.sh | sh, install atuin]
   - [yes | ~/.fzf/install, install fzf]
   - [~/dotfiles/update_pyenv_nvim.sh 3.13.2, update and install nvim environment]
-  - [curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.2/install.sh | NVM_DIR="$HOME/.config/nvm" bash, Install nvm]
-  - [\. "$HOME/.config/nvm/nvm.sh" && nvm install 22, install nodejs]
+  - [\. "$HOME/dotfiles/nvm/nvm.sh" && nvm install 22, install nodejs]
   - [install_me/install_tmux2.sh, installing tmux]
   - [install_me/install_neovim2.sh, install neovim]
   - [ curl https://sh.rustup.rs -sSf > /tmp/rustup.sh && sh /tmp/rustup.sh -y, install rust]
