--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -77,8 +77,8 @@
   - [ ~/.cargo/bin/cargo install --locked --root ~/dotfiles/build procs, install procs]
   - [install_me/install_nerd_fonts.sh, install nerd fonts]
   - [fc-cache -fv ~/.fonts/, update cache with fonts]
-  - [\. "$HOME/.config/nvm/nvm.sh" && npm i -g bash-language-server, install bash-language-server]
-  - [\. "$HOME/.config/nvm/nvm.sh" && npm install -g dockerfile-language-server-nodejs, install dockerfile-language-server-nodejs]
+  - [\. "$HOME/dotfiles//nvm/nvm.sh" && npm i -g bash-language-server, install bash-language-server]
+  - [\. "$HOME/dotfiles//nvm/nvm.sh" && npm install -g dockerfile-language-server-nodejs, install dockerfile-language-server-nodejs]
   - [tldr --update, update tldr]
   - [curl -sSfL https://raw.githubusercontent.com/ajeetdsouza/zoxide/main/install.sh | sh, install zoxide]
   - [ bash <(curl -sL https://raw.githubusercontent.com/denisidoro/navi/master/scripts/install), install navi]
