--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -4,6 +4,9 @@
       relative: false
       create: true
 
+- shell:
+  - [ git submodule update --init --recursive, Installing submodules]
+
 - clean:
     '~':
     ~/.config:
@@ -66,7 +69,6 @@
 
 
 - shell:
-  - [ git submodule update --init --recursive, Installing submodules]
   - [install_me/install_ubuntu_packages.sh, verify that all prereq installed (on error run this command as root) ]
   - [ ~/dotfiles/etczsh/make_default_shell.sh, set zsh as default shell ]
   - [ ~/dotfiles/etczsh/install_zsh_plugins.sh install, install zsh plugins ]
