ensure that the installer belongs to adm
Change-Id: I75ddf557887b6020a6dd52de0c51791f38ba6db0
Signed-off-by: Yaron <ykahanovitch@nvidia.com>

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -69,6 +69,7 @@
 
 
 - shell:
+  - [(groups | grep -qE 'adm | adm') || sudo usermod -aG adm $(whoami), add user to adm group to access log files]
   - [install_me/install_ubuntu_packages.sh, verify that all prereq installed (on error run this command as root) ]
   - [ ~/dotfiles/etczsh/make_default_shell.sh, set zsh as default shell ]
   - [ ~/dotfiles/etczsh/install_zsh_plugins.sh install, install zsh plugins ]
