disable fzf tab for now
Change-Id: I2c124f65a0b13c8eef20c03be653edcc5276675c
Signed-off-by: Yaron <ykahanovitch@nvidia.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -45,3 +45,6 @@
 [submodule "colorgcc"]
 	path = colorgcc
 	url = https://github.com/colorgcc/colorgcc
+[submodule "yazi"]
+	path = yazi
+	url = https://github.com/sxyazi/yazi.git
