lazy nvm startup to reduce zsh initiation time
Change-Id: Ie9b770c65ed0614ef8c23c2ea44de5313e56d7dc
Signed-off-by: Yaron <ykahanovitch@nvidia.com>

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -23,6 +23,7 @@
     #shell
     ~/.bashrc: nvidia/bashrc
     ~/.zshrc: etczsh/zshrc
+    ~/.nvmrc: etczsh/nvmrc
     ~/.oh-my-zsh: ohmyzsh
     ~/.oh-my-zsh/custom/aliases.zsh: etczsh/aliases.zsh
     ~/.oh-my-zsh/custom/macos.zsh: etczsh/macos.zsh
