set tmux cliboard to support nested tmux sessions
Change-Id: I144e195cbe7268ecf796aa8582c4f68905ad5606
Signed-off-by: Yaron <ykahanovitch@nvidia.com>

--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -14,7 +14,10 @@ bind -n C-l "send-keys C-l ; run 'sleep 0.1' ; clear-history"
 #set-option -ga terminal-overrides ",xterm-256color:Tc"
 #set-option -ga terminal-overrides ",rxvt-unicode-256color:Tc"
 #set-option -ag terminal-overrides ",xterm-256color:Ms=\\E]52;c;%p2%s\\7"
-set-option -ag terminal-overrides ",screen-256color:clipboard"
+set -ag terminal-overrides ",xterm*:Ms=\\E]52;%p1%s;%p2%s\\007"
+set -ag terminal-overrides ",screen*:Ms=\\E]52;%p1%s;%p2%s\\007"
+
+set-option -ag terminal-overrides ",screen-256color:Ms=\\E]52;%p1%s;%p2%s\\007"
 
 set -g focus-events on
 #switch to full screen mode (per pane mode)
@@ -55,7 +58,7 @@ bind-key -n User0 run "echo yaron"
 set -s user-keys[1] "\e[5;30007~"
 
 # set clipboard on, means that clipboard will be passed vi osc52 standard, and the terminal should be configured and support that option.
-set -g set-clipboard external
+set -g set-clipboard on
 
 set-option -g set-titles on
 set-option -g set-titles-string "#S / #W / #T"
