--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -99,3 +99,4 @@
   - [ bash <(curl -sL https://raw.githubusercontent.com/denisidoro/navi/master/scripts/install), install navi]
   - [ curl -sSL https://raw.githubusercontent.com/tj/git-extras/main/install.sh | sudo bash /dev/stdin, install git-extras]
   - [ install_me/install_yazi.sh, install yazi cli]
+  - [ install_me/install_lazygit.sh, install lazygit]
