add gitlab client as submodule
Change-Id: I8ecf3c9895411fbf6bfe3c20cfc0ce7158781d06
Signed-off-by: Yaron <ykahanovitch@nvidia.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -51,3 +51,6 @@
 [submodule "1password"]
 	path = 1password
 	url = https://github.com/1Password/shell-plugins.git
+[submodule "tools/tools/cli"]
+	path = tools/tools/cli
+	url = https://gitlab.com/gitlab-org/cli.git
