--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -102,3 +102,4 @@
   - [ install_me/install_lazygit.sh, install lazygit]
   - [ install_me/install_lazydocker.sh, install lazydocker]
   - [ install_me/install_speedtest.sh, install speedtest ]
+  - [ install_me/install_glab.sh, install glab ]
