--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -11,6 +11,10 @@ setw -g mode-keys vi
 
 bind -n C-l "send-keys C-l ; run 'sleep 0.1' ; clear-history"
 
+set -g pane-scrollbars on
+set -g pane-scrollbars-position right
+set -g pane-scrollbars-style "bg=colour234,fg=colour255"
+
 #set-option -ga terminal-overrides ",xterm-256color:Tc"
 #set-option -ga terminal-overrides ",rxvt-unicode-256color:Tc"
 #set-option -ag terminal-overrides ",xterm-256color:Ms=\\E]52;c;%p2%s\\7"
