--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,87 @@
-Arpeggio==2.0.2
-astroid==3.3.10
-asttokens==3.0.0
-python-lsp-black==2.0.0
-cmake==4.0.2
-confluent-kafka==2.10.0
+annotated-types==0.7.0
+Arpeggio==2.0.3
+astroid==4.0.2
+asttokens==3.0.1
+beautifulsoup4==4.14.3
+black==25.12.0
+blessings==1.7
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.1
+cmake==4.2.1
+confluent-kafka==2.12.2
 curses-menu==0.9.0
 curses-util==0.0.25
-decorator==5.1.1
-Deprecated==1.2.18
+decorator==5.2.1
+Deprecated==1.3.1
 dill==0.4.0
 docstring-to-markdown==0.17
-executing==2.0.1
-flake8==7.2.0
+executing==2.2.1
+filelock==3.20.1
+flake8==7.3.0
 gdb-tools==1.5
-gevent==24.11.1
+gdown==5.2.0
+gevent==25.9.1
 glibc==0.6.1
-greenlet==3.2.2
-importlib_metadata==8.7.0
-ipython==9.2.0
+greenlet==3.3.0
+idna==3.11
+importlib_metadata==8.7.1
+ipython==9.8.0
 ipython_pygments_lexers==1.1.1
-isort==6.0.1
+isort==7.0.0
 jedi==0.19.2
-matplotlib-inline==0.1.6
+librt==0.7.4
+matplotlib-inline==0.2.1
 mccabe==0.7.0
-msgpack==1.1.0
-mypy==1.15.0
+msgpack==1.1.2
+mypy==1.19.1
 mypy_extensions==1.1.0
 neovim-remote==2.5.1
-numpy==2.2.5
-pandas==2.2.3
-parso==0.8.4
+numpy==2.4.0
+packaging==25.0
+pandas==2.3.3
+parso==0.8.5
+pathspec==0.12.1
 pexpect==4.9.0
-platformdirs==4.3.8
+platformdirs==4.5.1
 pluggy==1.6.0
-prompt_toolkit==3.0.51
-psutil==7.0.0
+prompt_toolkit==3.0.52
+psutil==7.1.3
 ptyprocess==0.7.0
 pure_eval==0.2.3
-pycodestyle==2.13.0
-pyflakes==3.3.2
-Pygments==2.19.1
-pylint==3.3.7
-pynvim==0.5.2
+pycodestyle==2.14.0
+pydantic==2.12.5
+pydantic_core==2.41.5
+pyflakes==3.4.0
+Pygments==2.19.2
+pylint==4.0.4
+pynvim==0.6.0
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-jsonrpc-server==0.4.0
+python-lsp-black==2.0.0
 python-lsp-jsonrpc==1.1.2
+python-lsp-server==1.14.0
+pytokens==0.3.0
 pytz==2025.2
-ripgrepy==2.1.0
+PyYAML==6.0.3
+requests==2.32.5
+ripgrepy==2.2.0
+setuptools==80.9.0
 six==1.17.0
+soupsieve==2.8.1
 stack-data==0.6.3
-tomlkit==0.13.2
+strec==1.0.0.post2
+tomlkit==0.13.3
+tqdm==4.67.1
 traitlets==5.14.3
-typing_extensions==4.13.2
-tzdata==2025.2
-ujson==5.10.0
-wcwidth==0.2.13
-wrapt==1.17.2
-zipp==3.21.0
-zope.event==5.0
-zope.interface==7.2
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.3
+ujson==5.11.0
+urllib3==2.6.2
+wcwidth==0.2.14
+wrapt==2.0.1
+zipp==3.23.0
+zope.event==6.1
+zope.interface==8.1.1
